# InterPyca

./: LICENSE  README.md  pyproject.toml
InterPyca/: main.py  report.py
InterPyca/assets/: basic.html
