

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "interpyca"
version = "0.1.0"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
]
description = "Package python for html5 report"
authors = [
  { name = "Luca Gessi", email = "lucagessi90@gmail.com" }
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"InterPyca" = ["assets/*", "assets/**/*"]